# compiler

./: .gitignore  LICENSE  Lexer token counter and output  README.md  build.py  pyproject.toml
.github/workflows/: release.yml
examples/: error.c  program.c  program1.c
src/compiler/: lexer.py  parser.py
src/compiler/cli/: cli.py
src/compiler/codegen/: __init__.py  code_generator.py
src/compiler/front-end/analysis/: semantic.py
src/compiler/front-end/ir/: ir_generator.py  ir_generator.py.bak  ir_generator.py.bak2
src/compiler/front_end/analysis/: c_parser.lark  parser.py  semantic.py
src/compiler/front_end/ir/: ir_generator.py
src/compiler/lark/: c_parser.lark  parser.py
src/compiler/utils/: __init__.py  logger.py
tests/: test_compiler.py  test_lexer.py
