[project]
name = "unam.fi.compilers.g5.06"
version = "0.1.2"
description = "Compiler created in Python for C language"
authors = [
    {name = "LuisQuintana23",email = "luisquintana2326@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ply (>=3.11,<4.0)",
    "lark (>=0.12.0,<1.0)",
    "llvmlite (>=0.41.0,<1.0)",
    "typing-extensions (>=4.8.0,<5.0)",
    "graphviz (>=0.20.1,<1.0)",
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "compiler", from = "src"}]

[tool.poetry.scripts]
parser = "compiler.front-end.analysis.parser:main"
semantic = "compiler.front-end.analysis.semantic:main"
ir = "compiler.front-end.ir.ir_generator:main"
codegen = "compiler.code_gen.code_generator:main"
build = "build:build"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pyinstaller = "^6.12.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true